--- a/f103cbt6-pengisi-oli-casting.ioc
+++ b/f103cbt6-pengisi-oli-casting.ioc
@@ -24,36 +24,39 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PB2
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_FATFS_VS_Generic
-Mcu.Pin27=VP_RTC_VS_RTC_Activate
-Mcu.Pin28=VP_RTC_VS_RTC_Calendar
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_FATFS_VS_Generic
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_RTC_VS_RTC_Activate
+Mcu.Pin31=VP_RTC_VS_RTC_Calendar
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -79,6 +82,10 @@ PA0-WKUP.GPIO_Label=USER_BTN
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=MAX485_DE2
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.Mode=Device
@@ -99,12 +106,20 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=MAX485_DE1
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=SPI1_CS
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=MAX485_DE3
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
