tambah pin buzzer, mean jadi modus, mode alarm

--- a/f103cbt6-pengisi-oli-casting.ioc
+++ b/f103cbt6-pengisi-oli-casting.ioc
@@ -30,35 +30,36 @@ Mcu.Pin12=PB12
 Mcu.Pin13=PB13
 Mcu.Pin14=PB14
 Mcu.Pin15=PB15
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin16=PA8
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PA15
-Mcu.Pin21=PB3
-Mcu.Pin22=PB4
-Mcu.Pin23=PB5
-Mcu.Pin24=PB6
-Mcu.Pin25=PB7
-Mcu.Pin26=PB8
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_FATFS_VS_Generic
-Mcu.Pin29=VP_RTC_VS_RTC_Activate
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB3
+Mcu.Pin23=PB4
+Mcu.Pin24=PB5
+Mcu.Pin25=PB6
+Mcu.Pin26=PB7
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_FATFS_VS_Generic
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=VP_RTC_VS_RTC_Calendar
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin35=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_RTC_VS_RTC_Activate
+Mcu.Pin31=VP_RTC_VS_RTC_Calendar
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA4
 Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -103,6 +104,10 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=BUZZER
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB0.GPIO_Label=POMPA_1_ON
 PB0.GPIO_Mode=GPIO_MODE_INPUT
